--- a/templates/test.html
+++ b/templates/test.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <style>.score-container {
+  <style>
+.score-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,17 +22,6 @@
   animation: count-up 3s ease-in-out forwards;
 }
 
-@keyframes count-up {
-  from {
-    opacity: 0;
-    transform: translateY(2rem);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 </style>
   <script>
     const scoreElement = document.querySelector('.score');
